--- a/JUJERY/sub/main_menu_region/gangwon/css/gangwon.css
+++ b/JUJERY/sub/main_menu_region/gangwon/css/gangwon.css
@@ -326,7 +326,7 @@ p {
     grid-template-columns: 525px 383px;
     grid-template-rows: 150px 150px 150px 150px;
     -moz-column-gap: 25px;
-         column-gap: 25px;
+    column-gap: 25px;
   }
   .wrapper .flexWrapper main .main .sec1 .grid-box .div1 {
     grid-column: 1/2;
@@ -535,6 +535,12 @@ p {
 }
 .wrapper .flexWrapper main .main .bx-wrapper .bx-controls-direction {
   font-size: 30px;
+  display: none;
+}
+@media screen and (min-width: 1024px) {
+  .wrapper .flexWrapper main .main .bx-wrapper .bx-controls-direction {
+    display: block;
+  }
 }
 .wrapper .flexWrapper main .main .bx-wrapper .bx-controls-direction a {
   position: absolute;
@@ -975,4 +981,4 @@ footer .footer .footBox .footMenu ul li a {
   .wrapper1 .wrap-inner .container1 .footer .footerInfo1 p:last-child {
     margin-left: 100px;
   }
-}/*# sourceMappingURL=gangwon.css.map */
+} /*# sourceMappingURL=gangwon.css.map */
