--- a/JUJERY/sub/main_menu_region/chungcheong/css/chungcheong.css
+++ b/JUJERY/sub/main_menu_region/chungcheong/css/chungcheong.css
@@ -327,7 +327,7 @@ p {
     grid-template-rows: 186px 186px 186px;
     margin-top: 100px;
     -moz-column-gap: 15px;
-         column-gap: 15px;
+    column-gap: 15px;
   }
   .wrapper .flexWrapper main .main .sec1 .grid-box .div1 {
     grid-column: 1/2;
@@ -536,6 +536,12 @@ p {
 }
 .wrapper .flexWrapper main .main .bx-wrapper .bx-controls-direction {
   font-size: 30px;
+  display: none;
+}
+@media screen and (min-width: 1024px) {
+  .wrapper .flexWrapper main .main .bx-wrapper .bx-controls-direction {
+    display: block;
+  }
 }
 .wrapper .flexWrapper main .main .bx-wrapper .bx-controls-direction a {
   position: absolute;
@@ -976,4 +982,4 @@ footer .footer .footBox .footMenu ul li a {
   .wrapper1 .wrap-inner .container1 .footer .footerInfo1 p:last-child {
     margin-left: 100px;
   }
-}/*# sourceMappingURL=chungcheong.css.map */
+} /*# sourceMappingURL=chungcheong.css.map */
