--- a/JUJERY/sub/main_menu_region/jeolla/css/jeolla.css
+++ b/JUJERY/sub/main_menu_region/jeolla/css/jeolla.css
@@ -527,6 +527,12 @@ p {
 }
 .wrapper .flexWrapper main .main .bx-wrapper .bx-controls-direction {
   font-size: 30px;
+  display: none;
+}
+@media screen and (min-width: 1024px) {
+  .wrapper .flexWrapper main .main .bx-wrapper .bx-controls-direction {
+    display: block;
+  }
 }
 .wrapper .flexWrapper main .main .bx-wrapper .bx-controls-direction a {
   position: absolute;
@@ -967,4 +973,4 @@ footer .footer .footBox .footMenu ul li a {
   .wrapper1 .wrap-inner .container1 .footer .footerInfo1 p:last-child {
     margin-left: 100px;
   }
-}/*# sourceMappingURL=jeolla.css.map */
+} /*# sourceMappingURL=jeolla.css.map */
