--- a/JUJERY/sub/main_menu_region/gyeongsang/css/gyeongsang.css
+++ b/JUJERY/sub/main_menu_region/gyeongsang/css/gyeongsang.css
@@ -528,6 +528,12 @@ p {
 }
 .wrapper .flexWrapper main .main .bx-wrapper .bx-controls-direction {
   font-size: 30px;
+  display: none;
+}
+@media screen and (min-width: 1024px) {
+  .wrapper .flexWrapper main .main .bx-wrapper .bx-controls-direction {
+    display: block;
+  }
 }
 .wrapper .flexWrapper main .main .bx-wrapper .bx-controls-direction a {
   position: absolute;
@@ -968,4 +974,4 @@ footer .footer .footBox .footMenu ul li a {
   .wrapper1 .wrap-inner .container1 .footer .footerInfo1 p:last-child {
     margin-left: 100px;
   }
-}/*# sourceMappingURL=gyeongsang.css.map */
+} /*# sourceMappingURL=gyeongsang.css.map */
